# reelname

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  cargo-check.sh  cargo.sh  drizzle.config.ts  electron-builder.js  eslint.config.mjs  index.html  next.config.ts  package.json  pnpm-lock.yaml  session.md
.github/workflows/: release.yml
data/: reelname.db
electron/: main.js  preload.js
scripts/: build-electron.js  electron-dev.js
src/: App.tsx  app.rs  globals.css  main.rs  theme.rs  tray.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  matcher.rs  models.rs  naming.rs  parser.rs  scanner.rs  tmdb.rs  transfer.rs  tray.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/destinations/: route.ts
src/app/api/destinations/[id]/: route.ts
src/app/api/destinations/test-connection/: route.ts
src/app/api/groups/: route.ts
src/app/api/groups/[id]/: route.ts
src/app/api/groups/[id]/seasons/: route.ts
src/app/api/jobs/: route.ts
src/app/api/jobs/[id]/: route.ts
src/app/api/jobs/bulk/: route.ts
src/app/api/match/: route.ts
src/app/api/scan/: route.ts
src/app/api/search/: route.ts
src/app/api/settings/: route.ts
src/app/api/transfer/: route.ts
src/app/api/transfer/progress/: route.ts
src/app/api/transfer/status/: route.ts
src/components/: EpisodeResolveModal.tsx  Filters.tsx  Header.tsx  KeyboardShortcuts.tsx  MatchPanel.tsx  Pagination.tsx  QueueTable.tsx  SettingsModal.tsx  StatusBadge.tsx  Toast.tsx  TransferDrawer.tsx
src/core/: matcher.rs  mod.rs  naming.rs  parser.rs  scanner.rs  tmdb.rs  transfer.rs
src/db/: mod.rs  queries.rs  schema.rs
src/lib/: api.ts  matcher.ts  naming.ts  parser.ts  scanner.ts  tmdb.ts  transfer.ts  types.ts
src/lib/db/: index.ts  schema.ts
src/lib/store/: index.ts
src/ui/: badges.rs  episode_resolve_modal.rs  filters.rs  header.rs  match_panel.rs  mod.rs  pagination.rs  queue_table.rs  settings_modal.rs  toast.rs  transfer_drawer.rs
