[package]
name = "reelname"
version = "0.3.0"
description = "Media file renaming and transfer tool"
authors = ["ReelName"]
edition = "2021"

[lib]
name = "reelname_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
walkdir = "2"
ssh2 = "0.9"
strsim = "0.11"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
